--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,145 +1,190 @@
-@import "../../.cache/wal/colors-waybar.css";
-
-@define-color main-color @color13;
+@define-color fg #F5F5F5;
+@define-color bg #1F1F28;
+@define-color maincolor #FFC8FF;
+@define-color highlight #FFC8FF;
+@define-color disabled #A5A5A5;
+@define-color alert #E67E80;
+@define-color activegreen #26A65B;
 
 * {
-  font: bold 16px "JetBrainsMono Nerd Font Propo";
-  border: none;
+  font-family: "JetBrainsMono Nerd Font", Roboto, Helvetica, Arial, sans-serif;
+  font-size: 12px;
   border-radius: 0px;
   box-shadow: none;
   text-shadow: none;
 }
 
 window#waybar {
-  background: alpha(@background, 0.3);
+  color: @fg;
+  background: @bg;
+  transition-property: background-color;
+  transition-duration: 0.5s;
+  border: 2px solid @maincolor;
   border-radius: 10px;
-}
-
-#waybar {
-  background-color: #cec;
+  /* padding: 10px 5px 10px 0px; */
 }
 
 #window {
+  /* padding-left: 0px 15px; */
+  border-radius: 16px;
+  margin: 5px 0px;
   padding: 2px 10px;
   margin: 4px 2px 4px 4px;
-  background: alpha(@background, 0.3);
-  border-radius: 10px;
-  color: lighter(@main-color);
+  color: @maincolor;
 }
 
-tooltip {
-  background: alpha(@background, 0.3);
-  border: 2px solid alpha(lighter(@main-color), 0.3);
-  border-radius: 10px;
+button {
+  /* Use box-shadow instead of border so the text isn't offset */
+  box-shadow: inset 0 -3px transparent;
+  /* Avoid rounded borders under each button name */
+  border: none;
+  border-radius: 0px;
+  padding: 0px 5px;
+  margin: 5px 0px;
 }
 
-tooltip label {
-  color: @foreground;
-}
-
-#custom-arrow-right {
-  color: @main-color;
-  margin: 0px 4px;
-}
-
-#cpu,
-#memory,
-#disk,
-#custom-updates {
-  padding: 0px 6px;
-  margin: 8px 4px;
-  background: alpha(darker(@main-color), 0.3);
-  color: @main-color;
-  border-radius: 10px;
+/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
+button:hover {
+  background: inherit;
+  box-shadow: inset 0 -3px transparent;
 }
 
 #workspaces {
-  margin: 4px 4px;
-  background: alpha(@background, 0.5);
-  border-radius: 10px;
+  /* background: #282828; */
+  background: rgba(255, 200, 255, 0.3);
+  /* color: rgba(255, 200, 255, 0.5); */
+  margin: 5px 0px;
+  padding: 0px 5px;
+  border-radius: 5px;
+  /* border: solid 0px #f4d9e1; */
+  /* font-weight: normal; */
+  /* font-style: normal; */
 }
 
 #workspaces button {
   padding: 0px 4px;
-  margin: 4px 4px;
-  color: alpha(@foreground, 0.5);
-}
-
-#workspaces button.active {
-  transition: color 0.5s;
-  color: lighter(@main-color);
+  border-radius: 10px;
+  /* color: @fg; */
+  color: #fff;
 }
 
 #workspaces button.urgent,
 #workspaces button:hover {
-  color: @color5;
+  color: @maincolor;
   background-color: transparent;
 }
 
-#control-center {
-  padding: 0px 8px;
-  margin: 8px 4px;
-  color: lighter(@main-color);
-  background: alpha(@background, 0.3);
-  border-radius: 10px;
+#workspaces button.active {
+  transition: color 1s;
+  color: @highlight;
 }
 
-#bluetooth,
+/*River Tags/Workspaces*/
+#tags {
+  background-color: transparent;
+  border-radius: 0px;
+  padding: 0px 5px;
+}
+
+#tags button {
+  /* color: @maincolor; */
+  background: @bg;
+
+  /*If you need round border icons*/
+  border-radius: 0px;
+  padding: 0px 0px;
+  margin: 5px 0px;
+}
+
+#tags button.occupied {
+  color: @fg;
+}
+
+#tags button.focused {
+  /* color: @highlight; */
+}
+
+#tags button.urgent {
+  color: @alert;
+}
+
+#clock,
+#cava,
+#battery,
+#cpu,
+#memory,
+#disk,
+#temperature,
+#language,
+#backlight,
+#backlight-slider,
 #network,
-#pulseaudio {
-  padding: 0px 0 0 4px;
+#pulseaudio,
+#wireplumber,
+#custom-media,
+#taskbar,
+#tray,
+#tray menu,
+#tray > .needs-attention,
+#tray > .passive,
+#tray > .active,
+#mode,
+#scratchpad,
+#custom-notification,
+#custom-wifi,
+#custom-kdeconnect,
+#custom-bluetooth,
+#custom-power,
+#custom-separator,
+#idle_inhibitor,
+#mpd {
+  padding: 0px 5px;
+  margin: 0px 5px;
+  color: @maincolor;
 }
 
-#pulseaudio-slider slider {
-  min-height: 0px;
-  min-width: 0px;
-  background-color: transparent;
-  border: none;
-  box-shadow: none;
+#custom-notification,
+#custom-wifi,
+#custom-kdeconnect,
+#custom-bluetooth,
+#custom-power,
+#idle_inhibitor {
+  color: @bg;
 }
 
-#pulseaudio-slider {
-  margin: 10px;
+#clock,
+#custom-group {
+  color: @bg;
+  background-color: @maincolor;
+  margin: 5px;
+  padding: 0px 5px;
+  border-radius: 5px;
 }
 
-#pulseaudio-slider highlight {
-  border-radius: 8px;
-  background-color: lighter(@main-color);
+#custom-separator {
+  padding: 0px;
+  margin: 0px;
+  color: @disabled;
 }
 
-#language {
-  padding: 0px 3px 2px 0px;
+#custom-power {
+  color: @alert;
 }
 
-#custom-arrow-left {
-  color: lighter(@main-color);
-  margin: 0px 4px;
+#tray {
+  /*background-color: @maincolor;*/
+  border: 1px solid @maincolor;
+  margin: 5px;
+  padding: 0px 15px;
+  border-radius: 5px;
 }
 
-#custom-notifications,
-#custom-weather,
-#custom-theme-switcher {
-  padding: 0px 8px;
-  margin: 8px 4px;
-  color: @main-color;
-  background: alpha(darker(@main-color), 0.3);
-  border-radius: 10px;
+#network.disconnected,
+#pulseaudio.muted,
+#wireplumber.muted {
+  color: @alert;
 }
 
-#clock {
-  padding: 0px 8px;
-  margin: 4px 2px 4px 2px;
-  background: alpha(@background, 0.3);
-  border-radius: 10px;
-  color: lighter(@main-color);
-}
-
-#power {
-  background: alpha(@main-color, 0.3);
-  border-radius: 10px;
-  margin: 4px;
-}
-
-#battery {
-  padding: 0px 8px;
+label:focus {
+  background-color: @bg;
 }
