--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -20,13 +20,10 @@ window#waybar {
   background: alpha(@bg, 0.9);
   transition-property: background-color;
   transition-duration: 0.5s;
-  /* border: 2px solid @maincolor; */
   border-radius: 10px;
-  /* padding: 10px 5px 10px 0px; */
 }
 
 #window {
-  /* padding-left: 0px 15px; */
   border-radius: 16px;
   margin: 5px 0px;
   padding: 2px 10px;
@@ -35,37 +32,28 @@ window#waybar {
 }
 
 button {
-  /* Use box-shadow instead of border so the text isn't offset */
   box-shadow: inset 0 -3px transparent;
-  /* Avoid rounded borders under each button name */
   border: none;
   border-radius: 0px;
   padding: 0px 5px;
   margin: 5px 0px;
 }
 
-/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 button:hover {
   background: inherit;
   box-shadow: inset 0 -3px transparent;
 }
 
 #workspaces {
-  /* background: #282828; */
   background: rgba(255, 200, 255, 0.3);
-  /* color: rgba(255, 200, 255, 0.5); */
   margin: 5px 0px;
   padding: 0px 5px;
   border-radius: 5px;
-  /* border: solid 0px #f4d9e1; */
-  /* font-weight: normal; */
-  /* font-style: normal; */
 }
 
 #workspaces button {
   padding: 0px 4px;
   border-radius: 10px;
-  /* color: @fg; */
   color: #fff;
 }
 
@@ -80,113 +68,30 @@ button:hover {
   color: @highlight;
 }
 
-/*River Tags/Workspaces*/
-#tags {
-  background-color: transparent;
-  border-radius: 0px;
-  padding: 0px 5px;
-}
+/* #tags button { */
+/*   background: @bg; */
+/**/
+/*   border-radius: 0px; */
+/*   padding: 0px 0px; */
+/*   margin: 5px 0px; */
+/* } */
 
-#tags button {
-  /* color: @maincolor; */
-  background: @bg;
+/* #custom-separator { */
+/*   padding: 0px; */
+/*   margin: 0px; */
+/*   color: @disabled; */
+/* } */
 
-  /*If you need round border icons*/
-  border-radius: 0px;
-  padding: 0px 0px;
-  margin: 5px 0px;
-}
+/* #custom-power { */
+/*   color: @alert; */
+/* } */
 
-#tags button.occupied {
-  color: @fg;
-}
-
-#tags button.focused {
-  /* color: @highlight; */
-}
-
-#tags button.urgent {
-  color: @alert;
-}
-
-#clock,
-#cava,
-#battery,
-#cpu,
-#memory,
-#disk,
-#temperature,
-#language,
-#backlight,
-#backlight-slider,
-#network,
-#pulseaudio,
-#wireplumber,
-#custom-media,
-#taskbar,
-#tray,
-#tray menu,
-#tray > .needs-attention,
-#tray > .passive,
-#tray > .active,
-#mode,
-#scratchpad,
-#custom-notification,
-#custom-wifi,
-#custom-kdeconnect,
-#custom-bluetooth,
-#custom-power,
-#custom-separator,
-#idle_inhibitor,
-#mpd {
-  padding: 0px 5px;
-  margin: 0px 5px;
-  color: @maincolor;
-}
-
-#custom-notification,
-#custom-wifi,
-#custom-kdeconnect,
-#custom-bluetooth,
-#custom-power,
-#idle_inhibitor {
-  color: @bg;
-}
-
-#clock,
-#custom-group {
-  /* color: @maincolor; */
-  /* background-color: rgba(255, 200, 255, 0.3); */
-  /* background-color: @maincolor; */
-  background-color: transparent;
-  margin: 5px;
-  padding: 0px 5px;
-  border-radius: 5px;
-}
-
-#custom-separator {
-  padding: 0px;
-  margin: 0px;
-  color: @disabled;
-}
-
-#custom-power {
-  color: @alert;
-}
-
-#tray {
-  /*background-color: @maincolor;*/
-  border: 1px solid @maincolor;
-  margin: 5px;
-  padding: 0px 15px;
-  border-radius: 5px;
-}
-
-#network.disconnected,
-#pulseaudio.muted,
-#wireplumber.muted {
-  color: @alert;
-}
+/* #tray { */
+/*   border: 1px solid @maincolor; */
+/*   margin: 5px; */
+/*   padding: 0px 15px; */
+/*   border-radius: 5px; */
+/* } */
 
 label:focus {
   background-color: @bg;
